--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="site.webmanifest">
 
   <title>Vadim Misko</title>
-  <meta name="description" content="">
+  <meta name="description" content="Software Engineer">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
@@ -35,9 +35,9 @@
   <h1>Vadim Misko</h1>
   hello: <a target="_blank" href="mailto:vadimmisko.dev@gmail.com">vadimmisko.dev@gmail.com</a>
   <br>
-  github: <a target="_blank" href="https://github.com/vadimmisko">@vadimmisko</a>
+  github: <a target="_blank" href="https://github.com/vadimmisko" rel="noopener">@vadimmisko</a>
   <br>
-  twitter: <a target="_blank" href="https://twitter.com/vadimxmisko">@vadimxmisko</a>
+  twitter: <a target="_blank" href="https://twitter.com/vadimxmisko" rel="noopener">@vadimxmisko</a>
 
   <script>
     console.log('vadimmisko ⚡ 2019')
