Add bg for model viewer

--- a/model-viewer.html
+++ b/model-viewer.html
@@ -47,6 +47,7 @@
     src="./assets/3d/monkey.glb"
     ios-src="./assets/3d/monkey.usdz"
     alt="A 3D model of an monkey head"
+    background-image="./assets/PANO_20190520_111943.jpg"
   >
   </model-viewer>
 
