Added basic dark mode

--- a/index.html
+++ b/index.html
@@ -5,35 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#fff">
   <link rel="manifest" href="site.webmanifest">
+  <link rel="stylesheet" href="./main.css">
 
   <title>Vadim Misko</title>
   <meta name="description" content="Software Engineer">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-  <style type="text/css">
-    :root {
-      --c-accent: blue;
-    }
-    body {
-      font-family: 'Roboto Slab', serif;
-      margin: 16px;
-    }
-    h1 { margin: 0; }
-    a {
-      text-decoration: none;
-      color: var(--c-accent);
-    }
-    a:hover { opacity: 0.75; }
-  </style>
 </head>
 
 <body>
-  <h1>Vadim Misko</h1>
-  hello: <a target="_blank" href="mailto:vadimmisko.dev@gmail.com">vadimmisko.dev@gmail.com</a>
+  <h1 class="mb1">Vadim Misko</h1>
+  email: <a target="_blank" href="mailto:vadimmisko.dev@gmail.com">vadimmisko.dev@gmail.com</a>
   <br>
   github: <a target="_blank" href="https://github.com/vadimmisko" rel="noopener">@vadimmisko</a>
   <br>
