--- a/model-viewer.html
+++ b/model-viewer.html
@@ -8,6 +8,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#fafafa">
   <link rel="manifest" href="site.webmanifest">
+  <link rel="stylesheet" href="./main.css">
 
   <title>Model Viewer | Vadim Misko</title>
   <meta name="description" content="Software Engineer">
