--- a/index.html
+++ b/index.html
@@ -1,66 +1,51 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N8JQ8DTX77"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-N8JQ8DTX77');
+    </script>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="theme-color" content="#fff">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="stylesheet" href="./main.css">
+    <meta name="theme-color" content="#fff">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="stylesheet" href="./main.css">
 
-  <title>Vadim Misko</title>
-  <meta name="description" content="Software Engineer">
+    <title>Vadim Misko</title>
+    <meta name="description" content="Software Engineer">
 
-  <style type="text/css">
-    @media (max-width: 600px) {
-      .bottom-links {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+    <style type="text/css">
+      @media (max-width: 600px) {
+        .bottom-links {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+        }
+        .bottom-links > span {
+          display: none;
+        }
       }
-      .bottom-links > span {
-        display: none;
-      }
-    }
-  </style>
-</head>
+    </style>
+  </head>
 
-<body>
-  <h1 class="mb1">Vadim Misko</h1>
+  <body>
+    <h1 class="mb1">Vadim Misko</h1>
 
-  <p>
-    Full-stack developer from Ukraine making abstract ideas into products. Passionate about exploring digital spaces, trying new technologies, staying lean, and using the platform.
-  </p>
+    <p>
+      Full-stack developer from Ukraine making abstract ideas into products. Passionate about exploring digital spaces, trying new technologies, staying lean, and using the platform.
+    </p>
 
-  <div class="bottom-links">
-    <a target="_blank" href="mailto:vadimmisko.dev@gmail.com">vadimmisko.dev@gmail.com</a>
-    <span>·</span>
-    <a target="_blank" href="https://github.com/vadimmisko" rel="noopener">Github</a>
-    <span>·</span>
-    <a target="_blank" href="https://twitter.com/vadimxmisko" rel="noopener">Twitter</a>
-  </div>
-
-  <script>
-    (function(a,b,c){var d=a.history,e=document,f=navigator||{},g=localStorage,
-    h=encodeURIComponent,i=d.pushState,k=function(){return Math.random().toString(36)},
-    l=function(){return g.cid||(g.cid=k()),g.cid},m=function(r){var s=[];for(var t in r)
-    r.hasOwnProperty(t)&&void 0!==r[t]&&s.push(h(t)+"="+h(r[t]));return s.join("&")},
-    n=function(r,s,t,u,v,w,x){var z="https://www.google-analytics.com/collect",
-    A=m({v:"1",ds:"web",aip:c.anonymizeIp?1:void 0,tid:b,cid:l(),t:r||"pageview",
-    sd:c.colorDepth&&screen.colorDepth?screen.colorDepth+"-bits":void 0,dr:e.referrer||
-    void 0,dt:e.title,dl:e.location.origin+e.location.pathname+e.location.search,ul:c.language?
-    (f.language||"").toLowerCase():void 0,de:c.characterSet?e.characterSet:void 0,
-    sr:c.screenSize?(a.screen||{}).width+"x"+(a.screen||{}).height:void 0,vp:c.screenSize&&
-    a.visualViewport?(a.visualViewport||{}).width+"x"+(a.visualViewport||{}).height:void 0,
-    ec:s||void 0,ea:t||void 0,el:u||void 0,ev:v||void 0,exd:w||void 0,exf:"undefined"!=typeof x&&
-    !1==!!x?0:void 0});if(f.sendBeacon)f.sendBeacon(z,A);else{var y=new XMLHttpRequest;
-    y.open("POST",z,!0),y.send(A)}};d.pushState=function(r){return"function"==typeof d.onpushstate&&
-    d.onpushstate({state:r}),setTimeout(n,c.delay||10),i.apply(d,arguments)},n(),
-    a.ma={trackEvent:function o(r,s,t,u){return n("event",r,s,t,u)},
-    trackException:function q(r,s){return n("exception",null,null,null,null,r,s)}}})
-    (window,"UA-135518185-1",{anonymizeIp:true,colorDepth:true,characterSet:true,screenSize:true,language:true});
-  </script>
-</body>
-
+    <div class="bottom-links">
+      <a target="_blank" href="mailto:vadimmisko.dev@gmail.com">vadimmisko.dev@gmail.com</a>
+      <span>·</span>
+      <a target="_blank" href="https://github.com/vadimmisko" rel="noopener">Github</a>
+      <span>·</span>
+      <a target="_blank" href="https://twitter.com/vadimxmisko" rel="noopener">Twitter</a>
+    </div>
+  </body>
 </html>
