--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N8JQ8DTX77"></script>
