--- a/model-viewer.html
+++ b/model-viewer.html
@@ -1,42 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#fafafa">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="stylesheet" href="./main.css">
 
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#fafafa">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="stylesheet" href="./main.css">
+    <title>Model Viewer | Vadim Misko</title>
+    <meta name="description" content="Software Engineer">
 
-  <title>Model Viewer | Vadim Misko</title>
-  <meta name="description" content="Software Engineer">
+    <style type="text/css">
+      #model-viewer {
+        width: 100%;
+        height: calc(100vh - 32px);
+      }
+    </style>
 
-  <style type="text/css">
-    #model-viewer {
-      width: 100%;
-      height: calc(100vh - 32px);
-    }
-  </style>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+    <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+  </head>
 
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
-  <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-</head>
-
-<body>
-  <model-viewer
-    id="model-viewer"
-    ar
-    unstable-webxr
-    auto-rotate
-    camera-controls
-    src="./assets/3d/monkey.glb"
-    ios-src="./assets/3d/monkey.usdz"
-    alt="A 3D model of an monkey head"
-    background-image="./assets/PANO_20190520_111943.jpg"
-  >
-  </model-viewer>
-</body>
-
+  <body>
+    <model-viewer
+      id="model-viewer"
+      ar
+      unstable-webxr
+      auto-rotate
+      camera-controls
+      src="./assets/3d/monkey.glb"
+      ios-src="./assets/3d/monkey.usdz"
+      alt="A 3D model of an monkey head"
+      background-image="./assets/PANO_20190520_111943.jpg"
+    >
+    </model-viewer>
+  </body>
 </html>
